--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/V_0065.loader.js";
+      var loaderUrl = buildUrl + "/v_007.loader.js";
       var config = {
-        dataUrl: buildUrl + "/V_0065.data",
-        frameworkUrl: buildUrl + "/V_0065.framework.js",
-        codeUrl: buildUrl + "/V_0065.wasm",
+        dataUrl: buildUrl + "/v_007.data",
+        frameworkUrl: buildUrl + "/v_007.framework.js",
+        codeUrl: buildUrl + "/v_007.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "DndArena",
