--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/V_008.loader.js";
+      var loaderUrl = buildUrl + "/v0085.loader.js";
       var config = {
-        dataUrl: buildUrl + "/V_008.data",
-        frameworkUrl: buildUrl + "/V_008.framework.js",
-        codeUrl: buildUrl + "/V_008.wasm",
+        dataUrl: buildUrl + "/v0085.data",
+        frameworkUrl: buildUrl + "/v0085.framework.js",
+        codeUrl: buildUrl + "/v0085.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "DndArena",
